--- a/FrontEnd/mindsafe/src/app/menu-sidenav/modal-funcionario/modal-funcionario.component.html
+++ b/FrontEnd/mindsafe/src/app/menu-sidenav/modal-funcionario/modal-funcionario.component.html
@@ -1,14 +1,14 @@
 <div style="display: flex; flex-direction: row;">
   <h1 mat-dialog-title>Informações Pessoais</h1>
   <span style="flex: 1 1 auto;"></span>
-  <button matTooltip="Fechar a janela" aria mat-icon-button matDialogClose>
+  <button matTooltip="Fechar a janela" aria mat-icon-button (click)="onClose()">
     <i class="material-icons" style="color: #565656;">close</i>
   </button>
 </div>
 
 <div mat-dialog-content [formGroup]="formFuncionario">
   <div class="content-avatar" [ngStyle.xs]="{'margin': '15px 20% 40px 20%'}">
-    <div class="avatar" [ngStyle]="{'background-image': 'url(' + imgUsuario + ')' }">
+    <div class="avatar" [ngStyle]="{'background-image': 'url(' + imgUser + ')' }">
       <button matTooltip="Adicionar/Alterar foto" mat-icon-button class="input-img">
         <label for="file-input" class="material-icons">edit</label>
       </button>
