--- a/FrontEnd/mindsafe/src/app/shared/residencias-info-modal/residencias-info-modal.component.scss
+++ b/FrontEnd/mindsafe/src/app/shared/residencias-info-modal/residencias-info-modal.component.scss
@@ -44,18 +44,25 @@ button {
 .imagem-residencia{
   background-color: lightcoral;
   width: 100%;
-  height: 60%;
+  height: 50%;
   text-align: center;
 }
 
 .info-familia{
   float: left;
   width: 50%;
+  position: relative;
+}
 
+.info-familia h2,h3{
+  position: relative;
+  margin-top: 5%;
+  margin-left: 7%;
+  margin-bottom: -6%;
 }
 
 .info-residencia{
-  margin-top: 1.5%;
+  margin-top: 1.0%;
   width: 50%;
   float: right;
 
@@ -63,7 +70,7 @@ button {
 
 #maticon{
   margin-right: 6%;
-  padding: 2%;
+  padding: 0.5%;
   vertical-align: -20%;
   font-size: 2em;
 }
@@ -73,42 +80,10 @@ button {
 
 }
 
-// .info-familia h2{
-//   display: inline-block;
-//   position: relative;
-//   text-align: left;
-//   margin-right: 10%;
-//   margin-left: 2%;
-// }
-// .info-familia mat-icon{
-//   display: inline-block;
-//   position: relative;
-//   font-size: 3em;
-//   padding: 2%;
-//   vertical-align: -20%;
-// }
-
-// .info-familia p{
-//   margin-top: 10px;
-//   padding: 10px;
-//   display: inline-table;
-//   text-align: right;
-// }
-
-
-// .info-componentes-familia{
-//   display: inline-block;
-//   position: relative;
-//   text-align: right;
-
-// }
-
 .button-xs {
   margin-right: -20px;
   margin-top: -65px;
 }
-
-
 
 .box-padrao {
   box-shadow: 1px 1px 6px #00000091;
