--- a/FrontEnd/mindsafe/src/app/residencias/residencias-form-modal/residencias-form.component.html
+++ b/FrontEnd/mindsafe/src/app/residencias/residencias-form-modal/residencias-form.component.html
@@ -1,48 +1,43 @@
 
-<h1 matDialogTitle>Cadastrar</h1>
+<h1 matDialogTitle>{{ tituloModal }}</h1>
 
-<mat-dialog-content>
+<mat-dialog-content [ngStyle.xs]="{ 'max-height': '340px' }">
   <form [formGroup]="formResidencia">
-    <div fxLayout="row" fxLayoutGap="10px">
+    <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px">
       <mat-form-field fxFlex>
         <mat-select placeholder="Família" formControlName="familia">
           <mat-option *ngFor="let familia of familias" [value]="familia">{{ familia.nome }}</mat-option>
         </mat-select>
+        <mat-error>
+          {{ retornarValidacoes('família', formResidencia.get('familia')) }}
+        </mat-error>
       </mat-form-field>
 
       <mat-form-field fxFlex>
         <mat-select placeholder="Microárea" formControlName="microArea">
-          <mat-option *ngFor="let microArea of microAreas" [value]="microArea">{{ microArea.idMicroArea }}</mat-option>
+          <mat-option *ngFor="let microArea of microAreas" [value]="microArea">
+            <span [ngStyle]="{ 'float': 'left' }">{{ microArea.idMicroArea }}</span>
+            <span [ngStyle]="{ 'float': 'right' }">{{ microArea.bairro.nome }}</span>
+          </mat-option>
         </mat-select>
+        <mat-error>
+          {{ retornarValidacoes('microárea', formResidencia.get('microArea')) }}
+        </mat-error>
       </mat-form-field>
     </div>
 
-    <div fxLayout="row" fxLayoutGap="10px">
+    <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px">
       <mat-form-field fxFlex>
-        <input matInput placeholder="CEP" formControlName="cep" #cep [textMask]="{mask: maskCep, guide: false}">
-        <mat-hint align="end">{{ cep.value?.length }} / 10</mat-hint>
+        <input matInput placeholder="CEP" formControlName="cep" #cep [textMask]="{ mask: maskCep, guide: false }">
+        <mat-hint align="end">{{ cep.value?.length }} / 9</mat-hint>
         <mat-error>
           {{ retornarValidacoes('cep', formResidencia.get('cep')) }}
         </mat-error>
       </mat-form-field>
 
       <mat-form-field fxFlex>
-        <!-- <mat-select placeholder="Bairro" formControlName="microArea">
-          <mat-option *ngFor="let microArea of microAreas" [value]="microArea">{{ microArea.bairro.nome }}</mat-option>
-        </mat-select> -->
-        <!-- formResidencia.get('microArea')?.value.bairro.nome -->
-        <input matInput placeholder="Bairro" [value] = "formResidencia.get('microArea').value.bairro != null ? formResidencia.get('microArea').value.bairro.nome : ''" readonly>
+        <input matInput placeholder="Bairro" [value]="formResidencia.get('microArea').value.bairro != null ? formResidencia.get('microArea').value.bairro.nome : ''" readonly>
       </mat-form-field>
-
-      <!-- Campo Bairro ainda não implementado juntamente com o ViaCep -->
-
-      <!-- <mat-form-field fxFlex>
-        <input matInput placeholder="Bairro" formControlName="bairro" #cep>
-        <mat-hint>{{ bairro.value?.length }} / 250</mat-hint>
-        <mat-error>
-          {{ retornarValidacoes('bairro', formResidencia.get('bairro')) }}
-        </mat-error>
-      </mat-form-field> -->
     </div>
 
     <div fxLayout="row" fxLayoutGap="10px">
@@ -55,15 +50,16 @@
       </mat-form-field>
     </div>
 
-    <div fxLayout="row" fxLayoutGap="10px">
+    <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px">
       <mat-form-field fxFlex>
-        <input matInput placeholder="Número" formControlName="numero" #numero>
+        <input type="number" matInput placeholder="Número" formControlName="numero" #numero>
         <mat-error>
           {{ retornarValidacoes('numero', formResidencia.get('numero')) }}
         </mat-error>
       </mat-form-field>
+
       <mat-form-field fxFlex>
-        <input type="color" matInput placeholder="Cor Da Casa" formControlName="cor" #cor>
+        <input matInput placeholder="Cor Da Casa" formControlName="cor" #cor>
         <mat-error>
           {{ retornarValidacoes('cor', formResidencia.get('cor')) }}
         </mat-error>
@@ -92,13 +88,13 @@
   </form>
 </mat-dialog-content>
 
-<mat-dialog-actions [attr.align]="start" fxLayout="row" fxLayoutGap="10px">
+<mat-dialog-actions fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px">
   <button fxFlex mat-raised-button color="warn" (click)="onDecline()">
     CANCELAR <mat-icon class="material-icons">cancel</mat-icon>
-  </button>
+  </button><br>
 
   <button fxFlex mat-raised-button color="primary" (click)="onConfirm()" [disabled] = "formResidencia.invalid">
-    CADASTRAR <mat-icon class="material-icons">send</mat-icon>
+    {{ txtBotao }} <mat-icon class="material-icons">send</mat-icon>
   </button>
 </mat-dialog-actions>
 
