--- a/FrontEnd/mindsafe/src/app/residencias/residencias-form-modal/residencias-form.component.scss
+++ b/FrontEnd/mindsafe/src/app/residencias/residencias-form-modal/residencias-form.component.scss
@@ -1,79 +1,90 @@
 .cabecalho {
-    width: 100%;
-  }
-  
-  .cabecalho button {
-    position: relative;
-    float: right;
-    margin-top: -55px;
-  }
-  
-  .button-xs {
-    margin-right: -20px;
-    margin-top: -65px;
-  }
-  
-  .alinhamento-direita {
-    margin: 0 5px;
-    position: relative;
-    float: right;
-  }
-  
-  mat-form-field {
-    width: 100%;
-  }
-  
-  mat-divider {
-    width: 100%;
-    position: relative;
-    float: left;
-    margin: 30px 0px;
-  }
-  
-  mat-card-footer {
-    position: absolute;
-  }
-  
-  .card-header {
-    background-color: #cecece;
-    padding-top: 10px;
-    border-radius: 5px 5px 0px 0px;
-  }
-  
-  .card-footer {
-    position: relative;
-    float: unset;
-    padding: 10px;
-    background-color: #cecece;
-  }
-  
-  .card-content {
-    margin: 5px;
-  }
-  
-  .esquerda {
-    margin: 0px 0px 0px 10px;
-    position: relative;
-    float: left;
-  }
-  
-  .direita {
-    position: relative;
-    float: right;
-  }
-  
-  .card-info {
-    margin: 10px 0px;
-    position: relative;
-    float: left;
-    width: 95%;
-    height: 150px;
-  }
-  
-  .list {
-    overflow-y: auto;
-    overflow-x: auto;
-    height: 100px;
-    width: 100%;
-  }
-  
+  width: 100%;
+}
+
+.cabecalho button {
+  position: relative;
+  float: right;
+  margin-top: -55px;
+}
+
+.button-xs {
+  margin-right: -20px;
+  margin-top: -65px;
+}
+
+.alinhamento-direita {
+  margin: 0 5px;
+  position: relative;
+  float: right;
+}
+
+button {
+  transition: 1s all;
+  width: 100%;
+}
+
+mat-form-field {
+  transition: 1s all;
+  width: 100%;
+}
+
+mat-divider {
+  width: 100%;
+  position: relative;
+  float: left;
+  margin: 30px 0px;
+}
+
+mat-dialog-content {
+  transition: 1s all;
+  max-height: 400px;
+  overflow-y: auto;
+}
+
+mat-card-footer {
+  position: absolute;
+}
+
+.card-header {
+  background-color: #cecece;
+  padding-top: 10px;
+  border-radius: 5px 5px 0px 0px;
+}
+
+.card-footer {
+  position: relative;
+  float: unset;
+  padding: 10px;
+  background-color: #cecece;
+}
+
+.card-content {
+  margin: 5px;
+}
+
+.esquerda {
+  margin: 0px 0px 0px 10px;
+  position: relative;
+  float: left;
+}
+
+.direita {
+  position: relative;
+  float: right;
+}
+
+.card-info {
+  margin: 10px 0px;
+  position: relative;
+  float: left;
+  width: 95%;
+  height: 150px;
+}
+
+.list {
+  overflow-y: auto;
+  overflow-x: auto;
+  height: 100px;
+  width: 100%;
+}
