--- a/FrontEnd/mindsafe/src/app/residencias/residencias-info-modal/residencias-info-modal.component.html
+++ b/FrontEnd/mindsafe/src/app/residencias/residencias-info-modal/residencias-info-modal.component.html
@@ -1,31 +1,54 @@
-<div class="cabecalho">
-  <h1 mat-dialog-title>Informações da Residencia</h1>
-  <button ngClass.xs="button-xs" mat-icon-button (click)="onClose()">
-    <mat-icon class="material-icons" style="color: black;">close</mat-icon>
+<div style="display: flex; flex-direction: row;">
+  <h1 matDialogTitle>Informações da Residência</h1>
+  <span style="flex: 1 1 auto;"></span>
+  <button matTooltip="Fechar a janela" mat-icon-button matDialogClose>
+    <i class="material-icons" style="color: #565656;">close</i>
   </button>
 </div>
 
-<div class="imagem-residencia">
-  <div class="overlay" ngClass.xs="overlay-xs">
-    Photo by
-    <a href="https://unsplash.com/@bantersnaps?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="blank">bantersnaps</a> on
-    <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="blank">Unsplash</a>
+<mat-dialog-content>
+  <div class="imagem-residencia">
+    <div class="overlay" ngClass.xs="overlay-xs">
+      Photo by
+      <a href="https://unsplash.com/@bantersnaps?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+        target="blank">bantersnaps</a> on
+      <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+        target="blank">Unsplash</a>
+    </div>
   </div>
-</div>
 
-<div class="info-familia">
+  <div fxLayout="row" fxLayoutGap="15px">
+    <div fxLayout="column" fxFlex style="border: 1px solid black;">
+      <p>
+        <mat-icon>group</mat-icon>
+        <span>{{ familia.nome }}</span>
+      </p>
+    </div>
+
+    <div fxLayout="column" fxFlex style="border: 1px solid red;">
+
+    </div>
+  </div>
+
+  <!-- <div class="info-familia">
     <h2>
       <mat-icon id="maticon" style="color:black;">group</mat-icon>
-      {{ data.residencia.familia.nome}}
+      {{ data.residencia.familia.nome }}
     </h2>
     <h3>
-      <p><mat-icon id="maticon" style="color:black;">face</mat-icon>{{ retornaTotalFamiliares() }}</p>
+      <p>
+        <mat-icon id="maticon" style="color:black;">face</mat-icon>{{ retornarTotalFamiliares() | async }}
+      </p>
     </h3>
     <h3>
-      <p><mat-icon id="maticon" style="color:black;">color_lens</mat-icon>{{ data.residencia.cor}}</p>
+      <p>
+        <mat-icon id="maticon" style="color:black;">color_lens</mat-icon>{{ data.residencia.cor }}
+      </p>
     </h3>
-</div>
-<div class="info-residencia">
-  <p> <mat-icon id="maticon" style="color: black;">room</mat-icon> {{ residencia.join(' - ') }}</p>
-</div>
-
+  </div>
+  <div class="info-residencia">
+    <p>
+      <mat-icon id="maticon" style="color: black;">room</mat-icon> {{ residencia.join(' - ') }}
+    </p>
+  </div> -->
+</mat-dialog-content>
