--- a/FrontEnd/mindsafe/src/app/residencias/residencias/residencias.component.html
+++ b/FrontEnd/mindsafe/src/app/residencias/residencias/residencias.component.html
@@ -10,14 +10,13 @@
   <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="0.5%" fxLayoutAlign="center center" ngClass.xs="espaco-lateral">
 
     <div fxFlex="75%" fxFlex.md="65%" fxFlex.sm="60%" fxFlex.xs="50%">
-
       <mat-form-field>
-        <input matInput placeholder="Filtro" type="string" (focus)="disabledFilter()" #filtroTexto>
+        <input matInput placeholder="Filtro" [type]="tipoCampo" (focus)="disabledFilter()" #filtroTexto>
       </mat-form-field>
 
       <mat-form-field>
         <mat-label>Filtro Selecionado</mat-label>
-        <mat-select #filtroTipo>
+        <mat-select #filtroTipo (valueChange)="mudarTipoCampo(filtroTipo)">
           <mat-option *ngFor="let op of filtroPesquisa" value="{{ op.valor }}" #tipo>
             {{ op.nome }}
           </mat-option>
@@ -31,21 +30,24 @@
         <button mat-icon-button (click)="applyFilter(filtroTexto.value, filtroTipo.value)" [disabled]="(filtroTexto.value == '' || filtroTipo.value == null)">
           <mat-icon class="material-icons">search</mat-icon>
         </button>
+
         <button mat-icon-button (click)="onVerificarAcao('alterar')" [disabled]="selection.selected.length == 0">
           <mat-icon class="material-icons">edit</mat-icon>
         </button>
+
         <button mat-icon-button (click)="onDelete()" [disabled]="selection.selected.length == 0">
           <mat-icon class="material-icons">delete</mat-icon>
         </button>
+
         <button mat-icon-button (click)="onInfoResidencia()" [disabled]="selection.selected.length != 1">
           <mat-icon class="material-icons">perm_media</mat-icon>
         </button>
+
         <button mat-icon-button (click)="onVerificarAcao('add')" [disabled]="selection.selected.length > 0">
           <mat-icon class="material-icons">add</mat-icon>
         </button>
       </mat-card>
     </div>
-
   </div>
 
   <div class="mat-elevation-z8" class="espaco-lateral">
