ALterando estrutura do html da tela de residencias

--- a/FrontEnd/mindsafe/src/app/dashboard/dashboard/dashboard.component.scss
+++ b/FrontEnd/mindsafe/src/app/dashboard/dashboard/dashboard.component.scss
@@ -138,6 +138,10 @@ mat-list-item p.endereco {
 
 /* Informações gerais */
 
+mat-card {
+  transition: 1s all;
+}
+
 #cards .img-fundo {
   width: 100%;
   height: auto;
