--- a/FrontEnd/mindsafe/src/app/menu-sidenav/modal-funcionario/modal-funcionario.component.html
+++ b/FrontEnd/mindsafe/src/app/menu-sidenav/modal-funcionario/modal-funcionario.component.html
@@ -122,7 +122,7 @@
         </mat-error>
       </mat-form-field>
 
-      <button [disabled]="formFuncionario.get('funcao').invalid" (click)="alterar('Função')" mat-icon-button matTooltip="Editar Função">
+      <button [disabled]="formFuncionario.get('funcao').invalid" (click)="alterar('UBS')" mat-icon-button matTooltip="Editar Função">
         <mat-icon class="material-icons">edit</mat-icon>
       </button>
     </div>
