adicionando propriedade z-index no floating-button da tela de visitas

--- a/FrontEnd/mindsafe/src/app/residencias/residencias-alterar-modal/residencias-alterar.component.html
+++ b/FrontEnd/mindsafe/src/app/residencias/residencias-alterar-modal/residencias-alterar.component.html
@@ -1,1 +1,15 @@
-<p>pacientes-alterar works!</p>
+<h1 matDialogTitle>Alterar Residências</h1>
+
+<mat-dialog-content>
+  Dialog content
+</mat-dialog-content>
+
+<mat-dialog-actions fxLayout="row" fxLayout.xs="column" fxLayoutGap="15px">
+  <button mat-raised-button color="warn" matDialogClose fxFlex>
+    CANCELAR <mat-icon>cancel</mat-icon>
+  </button><br>
+
+  <button mat-raised-button color="primary" fxFlex>
+    ALTERAR <mat-icon>edit</mat-icon>
+  </button>
+</mat-dialog-actions>
