--- a/FrontEnd/mindsafe/src/app/residencias/residencias-alterar-modal/residencias-alterar.component.scss
+++ b/FrontEnd/mindsafe/src/app/residencias/residencias-alterar-modal/residencias-alterar.component.scss
@@ -1,3 +1,16 @@
+* {
+  transition: 1s all;
+}
+
 button {
   width: 100%;
+}
+
+mat-list {
+  max-height: 200px;
+  overflow-y: auto;
+}
+
+mat-dialog-actions {
+  margin-top: 10px;
 }
