--- a/FrontEnd/mindsafe/src/app/residencias/residencias/residencias.component.scss
+++ b/FrontEnd/mindsafe/src/app/residencias/residencias/residencias.component.scss
@@ -1,69 +1,66 @@
 .bg-residencias {
-    padding-top: 1px;
-    height: 300px;
-    width: 100%;
-    background-image: url('../../../assets/imagens/residencias.jpg');
-    background-size: cover;
-    background-position: center;
-    margin-bottom: 20px;
-  }
-  
-  .overlay {
-    bottom: 0;
-    background: rgb(0, 0, 0);
-    background: #0000007e;
-    color: #f1f1f1;
-    transition: .5s ease;
-    opacity:0;
-    color: white;
-    font-size: 20px;
-    padding: 20px;
-    text-align: center;
-  }
-  
-  .overlay a {
-    text-decoration: none;
-    color: #969696;
-  }
-  
-  .bg-residencias:hover .overlay {
-    opacity: 1;
-  }
-  
-  .titulo {
-    position: relative;
-    margin-top: 148px;
-    font-size: 30pt;
-    margin-left: 30px;
-    font-weight: bold;
-    color: white;
-    text-shadow: 1px 1px 10px #000000;
-  }
-  
-  .titulo-xs {
-    font-size: 15pt;
-    margin-top: 98px;
-  }
-  
-  .overlay-xs {
-    font-size: 15px;
-  }
-  
-  .bg-xs {
-    height: 200px;
-  }
-  
-  .espaco-lateral {
-    padding: 0 30px;
-  }
-  
-  mat-form-field {
-    width: 100%;
-  }
-  
-  table {
-    width: 100%;
-  }
-  
-  
-  
+  padding-top: 1px;
+  height: 300px;
+  width: 100%;
+  background-image: url("../../../assets/imagens/residencias.jpg");
+  background-size: cover;
+  background-position: center;
+  margin-bottom: 20px;
+}
+
+.overlay {
+  bottom: 0;
+  background: rgb(0, 0, 0);
+  background: #0000007e;
+  color: #f1f1f1;
+  transition: 0.5s ease;
+  opacity: 0;
+  color: white;
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
+}
+
+.overlay a {
+  text-decoration: none;
+  color: #969696;
+}
+
+.bg-residencias:hover .overlay {
+  opacity: 1;
+}
+
+.titulo {
+  position: relative;
+  margin-top: 148px;
+  font-size: 30pt;
+  margin-left: 30px;
+  font-weight: bold;
+  color: white;
+  text-shadow: 1px 1px 10px #000000;
+}
+
+.titulo-xs {
+  font-size: 15pt;
+  margin-top: 98px;
+}
+
+.overlay-xs {
+  font-size: 15px;
+}
+
+.bg-xs {
+  height: 200px;
+}
+
+.espaco-lateral {
+  padding: 0 30px;
+}
+
+mat-form-field {
+  width: 100%;
+}
+
+table {
+  width: 100%;
+}
