Adicionando campo input com autocomplete em bairros, ordenando a lsita de microáreas por nome do bairro e depois pelo número

--- a/FrontEnd/mindsafe/src/app/controle/controle/controle.component.html
+++ b/FrontEnd/mindsafe/src/app/controle/controle/controle.component.html
@@ -53,7 +53,7 @@
       </div>
 
       <mat-card-content class="alinhamento-texto">
-        Microáres
+        Microáreas
       </mat-card-content>
 
       <mat-card-actions align="end">
