--- a/FrontEnd/mindsafe/src/app/controle/microareas-modal/cadastrar-microarea/cadastrar-microarea.component.html
+++ b/FrontEnd/mindsafe/src/app/controle/microareas-modal/cadastrar-microarea/cadastrar-microarea.component.html
@@ -10,11 +10,17 @@
     </mat-form-field>
 
     <mat-form-field fxFlex>
-      <mat-select placeholder="Selecionar Bairro" (valueChange)="desabilitarSelecaoUbs(bairro.value)" formControlName="bairro" #bairro (click)="atribuirValidador(formMicroarea.get('bairro'), 'numero')">
+      <!-- <mat-select placeholder="Selecionar Bairro" (valueChange)="desabilitarSelecaoUbs(bairro.value)" formControlName="bairro" #bairro (click)="atribuirValidador(formMicroarea.get('bairro'), 'numero')">
         <mat-option *ngFor="let bairro of bairros$ | async" [value]="bairro">
           {{ bairro.nome }}
         </mat-option>
-      </mat-select>
+      </mat-select> -->
+      <input matInput placeholder="Bairro" (change)="desabilitarSelecaoUbs(bairro.value)" formControlName="bairro" #bairro (click)="atribuirValidador(formMicroarea.get('bairro'), 'numero')" [matAutocomplete]="listBairros">
+      <mat-autocomplete #listBairros="matAutocomplete">
+        <mat-option *ngFor="let bairro of bairros$ | async" [value]="bairro.nome">
+          {{ bairro.nome }}
+        </mat-option>
+      </mat-autocomplete>
       <mat-error>
         {{ retornarValidacoes(formMicroarea.get('bairro'), 'Bairro') }}
       </mat-error>
@@ -25,13 +31,13 @@
     </mat-slide-toggle>
 
     <mat-form-field fxFlex>
-      <mat-select placeholder="Selecionar UBS" [disabled]="disabledCampoUbs" [formControl]="controlUbs">
+      <mat-select placeholder="Selecionar UBS" [disabled]="disabledCampoUbs" formControlName="ubs">
         <mat-option *ngFor="let ubs of ubs$ | async" [value]="ubs">
           <span>{{ ubs.nome }}</span>
         </mat-option>
       </mat-select>
       <mat-error>
-        {{ retornarValidacoes(controlUbs, 'UBS') }}
+        {{ retornarValidacoes(formMicroarea.get('ubs'), 'UBS') }}
       </mat-error>
     </mat-form-field>
   </div>
@@ -42,7 +48,7 @@
     CANCELAR <mat-icon class="material-icons">cancel</mat-icon>
   </button><br>
 
-  <button mat-raised-button color="primary" [disabled]="formMicroarea.invalid || controlUbs.invalid" (click)="cadastrar()" fxFlex>
+  <button mat-raised-button color="primary" [disabled]="formMicroarea.invalid" (click)="cadastrar()" fxFlex>
     CONFIRMAR <mat-icon class="material-icons">send</mat-icon>
   </button>
 </mat-dialog-actions>
