--- a/FrontEnd/mindsafe/src/app/residencias/residencias/residencias.component.scss
+++ b/FrontEnd/mindsafe/src/app/residencias/residencias/residencias.component.scss
@@ -6,6 +6,7 @@
   background-size: cover;
   background-position: center;
   margin-bottom: 20px;
+  transition: 1s all;
 }
 
 .overlay {
@@ -38,6 +39,7 @@
   font-weight: bold;
   color: white;
   text-shadow: 1px 1px 10px #000000;
+  transition: 1s all;
 }
 
 .titulo-xs {
