Adicionando validação assíncrona para a tela de cadastro e alteração de famílias

--- a/FrontEnd/mindsafe/src/app/familias/alterar-familia-modal/alterar-familia-modal.component.html
+++ b/FrontEnd/mindsafe/src/app/familias/alterar-familia-modal/alterar-familia-modal.component.html
@@ -10,7 +10,7 @@
             {{ nome.value?.length}} / 250
           </mat-hint>
           <mat-error>
-            <!-- {{ retornarValidacoes(formFamilia.get('nome'), 'Nome')}} -->
+            {{ retornarValidacoes(formFamilia.get('nome'), 'Família')}}
           </mat-error>
         </mat-form-field>
 
